guest races quests feature

--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -43,6 +43,7 @@
     <script src="database/mixedData.js"></script>
     <script src="javascript/utils.js"></script>
     <script src="javascript/quests_handler.js"></script>
+    <script src="database/questsGuestRaces.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
