--- a/guestRaces/fairies.html
+++ b/guestRaces/fairies.html
@@ -43,7 +43,8 @@
     <script src="database/mixedData.js"></script>
     <script src="javascript/utils.js"></script>
     <script src="javascript/quests_handler.js"></script>
-
+    <script src="database/questsGuestRaces.js"></script>
+    
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
     <title>VII: Fairies - iDavis Elvenar</title>
