guest races google translation

--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -215,11 +215,24 @@
                     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Dwarves ::..<br></h5>
                     <img id="gr_banner" src="https://i.ibb.co/SPKXGVT/ch6-banner.png" alt="undefined" class="center " style="margin-bottom: 15px; width: 50%;">
 
+                    Intro
+                    <br><br>
+                    This subpage has not implemented the translation system yet. Therefore, you can use the automatic
+                    translation provided by Google using the button below.
+
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'column_with_tables');
+    }
+</script>
+    
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <footer id="footer">
     <script>
