change june_xxii_ to july_xxii_

--- a/eventTabs/july_xxii_/hoops.html
+++ b/eventTabs/july_xxii_/hoops.html
@@ -58,14 +58,14 @@
 
 <script>
 var currencies = {
-    "june_xxii_": {
+    "july_xxii_": {
         "ec": "https://i.ibb.co/W0SsWfj/EL-akcia-j-l-2021-currency1.png",
         "ep": "https://i.ibb.co/DbMvM6K/EL-akcia-j-l-2021-payback.png"
     }
 }
 
 var chests = {
-    "june_xxii_": [
+    "july_xxii_": [
         {
             "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png",
             "ec": 21,
@@ -432,7 +432,6 @@ function draw(chestsData, sort="") {
     divCenter.id = "div_chests";
     divCenter.style.textAlign = "center";
     let divBBTable = document.createElement("div");
-    divBBTable.className = "bbTable";
 
     for (let i = 0; i < chestsData.length; i++) {
 
