july_xxii additionalTab fix

--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -432,6 +432,7 @@ function draw(chestsData, sort="") {
     divCenter.id = "div_chests";
     divCenter.style.textAlign = "center";
     let divBBTable = document.createElement("div");
+    divBBTable.className = "bbTable";
 
     for (let i = 0; i < chestsData.length; i++) {
 
