--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Random rewards are now implemented!</strong> From now on, all the buildings that feature random productions are properly displayed on the website (such as Wishing Well, Goddess of Wishes or Genie) (May 6th 2022)</li>
                 <li><strong>Naturally Amazing event arrived!</strong> All buildings from this event are now in the database (April 14th 2022)</li>
                 <li><strong>Dawn of the Phoenix event arrived!</strong> All buildings from this event are now in the database (March 17th 2022)</li>
                 <li><strong>The Buried City event arrived!</strong> All buildings from this event are now in the database (February 3rd 2022)</li>
