rename questlines to guest races

--- a/guestRaces/amuni.html
+++ b/guestRaces/amuni.html
@@ -127,7 +127,7 @@
             document.getElementById("all_buildings").innerHTML = langUI("All Buildings");
             document.getElementById("all_events").innerHTML = langUI("All Events");
             document.getElementById("navbar_more").innerHTML = langUI("More");
-            document.getElementById("navbar_guestraces").innerHTML = langUI("All Questlines");
+            document.getElementById("navbar_guestraces").innerHTML = langUI("All Guest Races");
 
             generateGuestRacesDropdown();
         </script>
