--- a/guestRaces/amuni.html
+++ b/guestRaces/amuni.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XIII: Amuni - iDavis Elvenar</title>
+    <title>Amuni - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
