--- a/guestRaces/embassies.html
+++ b/guestRaces/embassies.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XVI: Embassies - iDavis Elvenar</title>
+    <title>Embassies - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
