--- a/guestRaces/halflings.html
+++ b/guestRaces/halflings.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XI: Halflings - iDavis Elvenar</title>
+    <title>Halflings - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
