--- a/guestRaces/revengeofexile.html
+++ b/guestRaces/revengeofexile.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XIX: Revenge of the Exile - iDavis Elvenar</title>
+    <title>Revenge of the Exile - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
