--- a/guestRaces/sorcerers.html
+++ b/guestRaces/sorcerers.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>X: Sorcerers and Dragons - iDavis Elvenar</title>
+    <title>Sorcerers and Dragons - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
