--- a/guestRaces/teamspirit.html
+++ b/guestRaces/teamspirit.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XVIII: Team Spirit - iDavis Elvenar</title>
+    <title>Team Spirit - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
