--- a/guestRaces/tradersofunur.html
+++ b/guestRaces/tradersofunur.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="../css/config.css">
-    <title>XVII: Traders of Unur - iDavis Elvenar</title>
+    <title>Traders of Unur - iDavis Elvenar</title>
     <link rel="icon" href="../images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
