--- a/eventTabs/july_xxii_/hoops.html
+++ b/eventTabs/july_xxii_/hoops.html
@@ -67,112 +67,127 @@ var currencies = {
 var chests = {
     "july_xxii_": [
         {
-            "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png",
-            "ec": 21,
+            "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",  //HOTOVO
+            "ec": 25,
             "ep": 1,
             "chances": [
               {
-                "percentage": 5,
+                "__class__": "RewardChanceVO",
+                "percentage": 7,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
+                "__class__": "RewardChanceVO",
                 "percentage": 12,
                 "type": "good",
                 "subType": "event_currency_1",
                 "amount": "30"
               },
               {
-                "percentage": 23,
-                "type": "runeShard",
-                "subType": "random",
+                "__class__": "RewardChanceVO",
+                "percentage": 22,
+                "type": "flexible_reward",
+                "subType": "frog_runeshards1",
                 "amount": "1"
               },
               {
-                "percentage": 25,
+                "__class__": "RewardChanceVO",
+                "percentage": 24,
+                "type": "flexible_reward",
+                "subType": "frog_orcs",
+                "amount": "5"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 35,
                 "type": "item",
                 "subType": "INS_RF_CN_5",
                 "amount": "1"
-              },
-              {
-                "percentage": 35,
-                "type": "flexible_reward",
-                "subType": "frog_seeds",
-                "amount": "6"
               }
             ],
             "id": "reward_pool_event_chest_a_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",
-            "ec": 26,
+            "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png", //HOTOVO
+            "ec": 21,
             "ep": 1,
             "chances": [
               {
-                "percentage": 6,
+                "__class__": "RewardChanceVO",
+                "percentage": 9,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
-                "percentage": 16,
-                "type": "item",
-                "subType": "INS_RF_CN_15",
-                "amount": "1"
-              },
-              {
-                "percentage": 22,
+                "__class__": "RewardChanceVO",
+                "percentage": 19,
                 "type": "good",
                 "subType": "spell_knowledge_boost_1",
                 "amount": "1"
               },
               {
-                "percentage": 28,
+                "__class__": "RewardChanceVO",
+                "percentage": 20,
                 "type": "flexible_reward",
                 "subType": "frog_barracks_HM",
-                "amount": "6"
+                "amount": "5"
               },
               {
-                "percentage": 28,
+                "__class__": "RewardChanceVO",
+                "percentage": 20,
                 "type": "flexible_reward",
                 "subType": "frog_barracks_HR",
-                "amount": "6"
+                "amount": "5"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 32,
+                "type": "item",
+                "subType": "INS_RF_CN_10",
+                "amount": "1"
               }
             ],
             "id": "reward_pool_event_chest_b_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",
-            "ec": 32,
+            "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",  //HOTOVO
+            "ec": 27,
             "ep": 1,
             "chances": [
               {
-                "percentage": 11,
+                "__class__": "RewardChanceVO",
+                "percentage": 9,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
+                "__class__": "RewardChanceVO",
                 "percentage": 11,
                 "type": "good",
                 "subType": "event_currency_1",
                 "amount": "40"
               },
               {
-                "percentage": 19,
+                "__class__": "RewardChanceVO",
+                "percentage": 25,
                 "type": "item",
-                "subType": "INS_KP_AW_5",
+                "subType": "INS_KP_AW_3",
                 "amount": "1"
               },
               {
-                "percentage": 22,
+                "__class__": "RewardChanceVO",
+                "percentage": 26,
                 "type": "good",
                 "subType": "knowledge_points",
                 "amount": "3"
               },
               {
-                "percentage": 37,
+                "__class__": "RewardChanceVO",
+                "percentage": 29,
                 "type": "flexible_reward",
                 "subType": "frog_mana",
                 "amount": "6"
@@ -181,30 +196,34 @@ var chests = {
             "id": "reward_pool_event_chest_c_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",
-            "ec": 46,
-            "ep": 2,
+            "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",  //HOTOVO
+            "ec": 31,
+            "ep": 1,
             "chances": [
               {
-                "percentage": 8,
+                "__class__": "RewardChanceVO",
+                "percentage": 11,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
+                "__class__": "RewardChanceVO",
                 "percentage": 12,
                 "type": "good",
                 "subType": "event_currency_1",
                 "amount": "50"
               },
               {
-                "percentage": 36,
+                "__class__": "RewardChanceVO",
+                "percentage": 37,
                 "type": "item",
-                "subType": "INS_KP_AW_3",
+                "subType": "INS_KP_AW_5",
                 "amount": "1"
               },
               {
-                "percentage": 44,
+                "__class__": "RewardChanceVO",
+                "percentage": 40,
                 "type": "good",
                 "subType": "knowledge_points",
                 "amount": "2"
@@ -213,191 +232,216 @@ var chests = {
             "id": "reward_pool_event_chest_d_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",
-            "ec": 49,
+            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",  //HOTOVO
+            "ec": 36,
             "ep": 2,
             "chances": [
               {
-                "percentage": 13,
+                "__class__": "RewardChanceVO",
+                "percentage": 10,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
-                "percentage": 17,
-                "type": "item",
-                "subType": "INS_RF_SPL_33",
-                "amount": "2"
-              },
-              {
-                "percentage": 23,
-                "type": "flexible_reward",
-                "subType": "frog_sentient_q_1_plus_1",
-                "amount": "9"
-              },
-              {
-                "percentage": 23,
+                "__class__": "RewardChanceVO",
+                "percentage": 15,
                 "type": "flexible_reward",
                 "subType": "frog_barracks_HR",
                 "amount": "9"
               },
               {
-                "percentage": 24,
+                "__class__": "RewardChanceVO",
+                "percentage": 15,
                 "type": "flexible_reward",
                 "subType": "frog_barracks_LM",
                 "amount": "9"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 17,
+                "type": "flexible_reward",
+                "subType": "frog_default3",
+                "amount": "10"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 43,
+                "type": "item",
+                "subType": "INS_RF_SPL_25",
+                "amount": "1"
               }
             ],
             "id": "reward_pool_event_chest_e_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",
-            "ec": 64,
+            "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",  //HOTOVO
+            "ec": 50,
             "ep": 2,
             "chances": [
               {
-                "percentage": 12,
+                "__class__": "RewardChanceVO",
+                "percentage": 8,
+                "type": "good",
+                "subType": "spell_pet_food_1",
+                "amount": "1"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 13,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
-                "percentage": 13,
+                "__class__": "RewardChanceVO",
+                "percentage": 14,
                 "type": "good",
                 "subType": "event_currency_1",
                 "amount": "80"
               },
               {
-                "percentage": 22,
-                "type": "good",
-                "subType": "knowledge_points",
-                "amount": "11"
-              },
-              {
-                "percentage": 25,
-                "type": "good",
-                "subType": "spell_good_production_boost_1",
-                "amount": "1"
-              },
-              {
-                "percentage": 28,
-                "type": "flexible_reward",
-                "subType": "frog_barracks_MA",
-                "amount": "9"
-              }
-            ],
-            "id": "reward_pool_event_chest_f_scroll_aquatic"
-          },
-          {
-            "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",
-            "ec": 79,
-            "ep": 3,
-            "chances": [
-              {
-                "percentage": 9,
-                "type": "good",
-                "subType": "event_currency_1",
-                "amount": "120"
-              },
-              {
-                "percentage": 15,
-                "type": "item",
-                "subType": "INS_KP_AW_10",
-                "amount": "2"
-              },
-              {
-                "percentage": 19,
-                "type": "episodic",
-                "subType": "daily_reward_event_chest_scroll_aquatic",
-                "amount": "1"
-              },
-              {
-                "percentage": 22,
-                "type": "item",
-                "subType": "INS_RF_CN_15",
-                "amount": "1"
-              },
-              {
-                "percentage": 35,
-                "type": "flexible_reward",
-                "subType": "frog_standard_q_2_plus_2",
-                "amount": "9"
-              }
-            ],
-            "id": "reward_pool_event_chest_g_scroll_aquatic"
-          },
-          {
-            "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",
-            "ec": 81,
-            "ep": 3,
-            "chances": [
-              {
-                "percentage": 6,
-                "type": "good",
-                "subType": "event_currency_1",
-                "amount": "150"
-              },
-              {
-                "percentage": 19,
-                "type": "item",
-                "subType": "INS_KP_AW_15",
-                "amount": "2"
-              },
-              {
-                "percentage": 23,
+                "__class__": "RewardChanceVO",
+                "percentage": 27,
                 "type": "item",
                 "subType": "INS_RF_SPL_25",
                 "amount": "1"
               },
               {
-                "percentage": 24,
+                "__class__": "RewardChanceVO",
+                "percentage": 38,
+                "type": "good",
+                "subType": "spell_good_production_boost_1",
+                "amount": "1"
+              }
+            ],
+            "id": "reward_pool_event_chest_f_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",  //HOTOVO
+            "ec": 55,
+            "ep": 2,
+            "chances": [
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 12,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "120"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 16,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
-                "percentage": 28,
+                "__class__": "RewardChanceVO",
+                "percentage": 20,
+                "type": "item",
+                "subType": "INS_KP_AW_15",
+                "amount": "1"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 23,
+                "type": "item",
+                "subType": "INS_RF_CN_15",
+                "amount": "2"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 29,
                 "type": "flexible_reward",
-                "subType": "frog_barracks_LR",
-                "amount": "12"
+                "subType": "frog_standard_q_2_plus_2",
+                "amount": "5"
+              }
+            ],
+            "id": "reward_pool_event_chest_g_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",  //HOTOVO
+            "ec": 68,
+            "ep": 3,
+            "chances": [
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 6,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "180"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 14,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 25,
+                "type": "flexible_reward",
+                "subType": "frog_runeshards2",
+                "amount": "1"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 27,
+                "type": "good",
+                "subType": "knowledge_points",
+                "amount": "8"
+              },
+              {
+                "__class__": "RewardChanceVO",
+                "percentage": 28,
+                "type": "item",
+                "subType": "INS_KP_AW_20",
+                "amount": "1"
               }
             ],
             "id": "reward_pool_event_chest_h_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",
-            "ec": 89,
+            "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",  //HOTOVO
+            "ec": 71,
             "ep": 3,
             "chances": [
               {
-                "percentage": 6,
+                "__class__": "RewardChanceVO",
+                "percentage": 4,
                 "type": "good",
                 "subType": "event_currency_1",
-                "amount": "200"
+                "amount": "300"
               },
               {
-                "percentage": 18,
-                "type": "item",
-                "subType": "INS_KP_AW_20",
-                "amount": "1"
-              },
-              {
-                "percentage": 21,
+                "__class__": "RewardChanceVO",
+                "percentage": 17,
                 "type": "episodic",
                 "subType": "daily_reward_event_chest_scroll_aquatic",
                 "amount": "1"
               },
               {
-                "percentage": 25,
+                "__class__": "RewardChanceVO",
+                "percentage": 20,
                 "type": "good",
                 "subType": "knowledge_points",
-                "amount": "10"
+                "amount": "12"
               },
               {
+                "__class__": "RewardChanceVO",
+                "percentage": 29,
+                "type": "item",
+                "subType": "INS_KP_AW_15",
+                "amount": "1"
+              },
+              {
+                "__class__": "RewardChanceVO",
                 "percentage": 30,
                 "type": "flexible_reward",
-                "subType": "frog_seeds",
-                "amount": "12"
+                "subType": "frog_default1",
+                "amount": "15"
               }
             ],
             "id": "reward_pool_event_chest_i_scroll_aquatic"
